# redteam-ai-benchmark

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXs.md  README.md  README.ru.md  SECURITY.md  analyze_semantic.py  benchmark.json  config.example.yaml  pyproject.toml  run_benchmark.py  run_benchmark_lmstudio.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_question.yml  bug_report.yml  feature_request.yml
benchmark/: __init__.py  orchestrator.py  runner.py  shutdown.py  types.py
datasets/v2/: benchmark.jsonl
docs/: agent-reference.md
models/: __init__.py  base.py  lmstudio.py  ollama.py  openrouter.py  openwebui.py
scoring/: __init__.py  base.py  constants.py  hybrid_scorer.py  keyword_scorer.py  llm_judge.py  semantic_scorer.py  technical_scorer.py
tests/: test_runtime_performance.py  test_semantic_scoring.py  test_v2_rubric.py
utils/: __init__.py  config.py  export.py  request_log.py
