[project]
name = "redteam-ai-benchmark"
version = "1.9.0"
description = "Evaluate uncensored LLMs for offensive security tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langfuse>=4.7.1",
    "pick>=2.6.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tabulate>=0.10.0",
    "numpy>=2.4.6",
]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
redteam-benchmark = "run_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
# Enable basic checks
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    ".trunk",
    ".pytest_cach",
    "__pycache__",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
